# egoboo

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  BUGS  BUGS.txt  CMakeLists.txt  COPYING  Changelog.txt  DEPENDENCIES.txt  Doxyfile  Egoboo.workspace  Egoboo_vs7.sln  Egoboo_vs8.sln  Egoboo_vs9.sln  KNOWN-BUGS.txt  Makefile  Makefile.Linux  Makefile.Windows  Makefile.svn  My Egoboo Stuff.lnk  README  README.Linux  README.Mac  README.MinGW  README.OSX  README.VisualStudio  README.Windows  README.md  Readme.txt  TODO  TODO.txt  appveyor-linux.yml  appveyor-nightly.yml  appveyor-windows.yml  appveyor.yml  classes.txt  controls.txt  distribute.ps1  egoboo.gta.runsettings  (+14 more)
egoboo/: CMakeLists.txt
egoboo/src/game/: Main.cpp
egolib/: CMakeLists.txt  IDSZ_map.c  IDSZ_map.h  Lua_libraries.props  Makefile  Makefile.Linux  Makefile.Windows  Makefile.lua  PhysicsFS_libraries.props  SDL_lib.props  SDL_libraries.props  _math.c  _math.h  _math.inl  bbox.c  bbox.h  bbox.inl  bsp.c  bsp.h  bsp.inl  clock.c  clock.h  console.c  console.h  console.inl  egoboo_endian.c  egoboo_endian.h  egoboo_fileutil.h  egoboo_math.c  egoboo_platform.h  egoboo_setup.c  egoboo_setup.h  egoboo_state_machine.h  egoboo_timer.h  egoboo_typedef.c  egoboo_typedef.h  egoboo_typedef_cpp.h  egolib-tests.vcxproj  egolib-tests.vcxproj.filters  egolib.cbp  (+77 more)
egolib/extensions/: SDL_GL_extensions.c  SDL_GL_extensions.h  SDL_extensions.c  SDL_extensions.h  ogl_debug.c  ogl_debug.h  ogl_extensions.c  ogl_extensions.h  ogl_include.c  ogl_include.h  ogl_texture.c  ogl_texture.h
egolib/file_formats/: SDL_md2.c  SDL_md2.h  cap_file.c  cap_file.h  configfile.c  configfile.h  controls_file-v1.c  controls_file-v1.h  controls_file-v2.c  controls_file-v2.h  controls_file-v3.c  controls_file-v3.h  controls_file.c  controls_file.h  eve_file.c  eve_file.h  id_md2.c  id_md2.h  id_normals.inl  map_file-v1.c  map_file-v1.h  map_file-v2.c  map_file-v2.h  map_file-v3.c  map_file-v3.h  map_file-v4.c  map_file-v4.h  map_file.c  map_file.h  map_tile_dictionary.c  map_tile_dictionary.h  module_file.c  module_file.h  mpd_file.c  mpd_file.h  passage_file.c  passage_file.h  pip_file.c  pip_file.h  quest_file.c  (+11 more)
egolib/lua/: lua_console.c  lua_console.h
egolib/platform/: file_amiga.c  file_linux.c  file_mac.m  file_win.c  sys_linux.c  sys_mac.c  sys_mac.m  sys_win32.c
egolib/src/egolib/: App.cpp  App.hpp  Clock.cpp  Clock.hpp  Debug.cpp  Debug.hpp  DynamicArray.cpp  DynamicArray.hpp  Exception.hpp  Float.cpp  Float.hpp  IDSZ.cpp  IDSZ.hpp  IDSZ_map.c  IDSZ_map.h  Ref.hpp  Stack.hpp  Time.cpp  Time.hpp  TrigonometricTable.hpp  _math.c  _math.h  _math.inl  aabb.c  aabb.h  assert.c  assert.h  bbox.c  bbox.h  bbox.inl  bsp.c  bsp.h  bsp.inl  bsp_aabb.c  bsp_aabb.h  bsp_leaf.c  bsp_leaf.h  bv.c  bv.h  clock.c  (+66 more)
egolib/src/egolib/AI/: AStar.c  AStar.cpp  AStar.h  AStar.hpp  LineOfSight.cpp  LineOfSight.hpp  State.hpp  WaypointList.c  WaypointList.h
egolib/src/egolib/Audio/: AudioSystem.cpp  AudioSystem.hpp
egolib/src/egolib/Configuration/: Configuration.hpp  Enum.hpp  EnumerationVariable.hpp  Number.hpp  NumericVariable.hpp  StandardVariable.hpp  StringOrBool.hpp  Variable.hpp  configfile.c  configfile.h
egolib/src/egolib/Console/: Console.cpp  Console.hpp
egolib/src/egolib/Core/: AssertionFailedException.hpp  CollectionUtilities.hpp  Component.cpp  Component.hpp  EnvironmentError.hpp  Exception.hpp  LockFailedException.hpp  QuadTree.hpp  Singleton.hpp  StringUtilities.hpp  System.cpp  System.hpp  ThreadPool.hpp  UnhandledSwitchCaseException.hpp
egolib/src/egolib/Entities/: Common.cpp  Common.hpp  Enchant.cpp  Enchant.hpp  Object.cpp  Object.hpp  ObjectHandler.cpp  ObjectHandler.hpp  Particle.cpp  Particle.hpp  ParticleHandler.cpp  ParticleHandler.hpp
egolib/src/egolib/Events/: KeyboardKeyEventArgs.hpp  MouseButtonEventArgs.hpp  MouseClickedEventArgs.hpp  MouseMovedEventArgs.hpp  MouseReleasedEventArgs.hpp  MouseWheelEventArgs.hpp  MouseWheelTurnedEventArgs.hpp  WindowEventArgs.hpp  _Include.hpp
egolib/src/egolib/Extensions/: ContextProperties.cpp  ContextProperties.hpp  SDL_GL_extensions.c  SDL_GL_extensions.h  SDL_extensions.c  SDL_extensions.h  WindowProperties.cpp  WindowProperties.hpp  ogl_debug.c  ogl_debug.h  ogl_extensions.c  ogl_extensions.h  ogl_include.c  ogl_include.h  ogl_texture.c  ogl_texture.h
egolib/src/egolib/FileFormats/: Globals.cpp  Globals.hpp  MapTileDefinitionsDictionary.hpp  MapTileDefinitionsDictionary.html  SDL_md2.c  configfile.c  configfile.h  controls_file-v1.c  controls_file-v1.h  controls_file-v2.c  controls_file-v2.h  controls_file-v3.c  controls_file-v3.h  controls_file.c  controls_file.h  id_md2.c  id_md2.h  map_file-v1.c  map_file-v1.h  map_file-v2.c  map_file-v2.h  map_file-v3.c  map_file-v3.h  map_file-v4.c  map_file-v4.h  map_file.c  map_file.h  map_fx.hpp  map_tile_dictionary.c  map_tile_dictionary.h  quest_file.c  quest_file.h  scancode_file.c  scancode_file.h  spawn_file.c  spawn_file.h  template.c  template.h  treasure_table_file.c  treasure_table_file.h  (+2 more)
egolib/src/egolib/Graphics/: Buffer.cpp  Buffer.hpp  Camera.hpp  ColorDepth.cpp  ColorDepth.hpp  ColourDepth.cpp  ColourDepth.hpp  Display.hpp  DisplayMode.cpp  DisplayMode.hpp  Font.cpp  Font.hpp  FontManager.cpp  FontManager.hpp  GraphicsContext.cpp  GraphicsContext.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  GraphicsSystemNew.cpp  GraphicsSystemNew.hpp  GraphicsWindow.cpp  GraphicsWindow.hpp  IndexBuffer.cpp  IndexBuffer.hpp  IndexDescriptor.cpp  IndexDescriptor.hpp  IndexFormat.cpp  IndexFormat.hpp  MD2Model.cpp  MD2Model.hpp  ModelDescriptor.cpp  ModelDescriptor.hpp  PixelFormat.cpp  PixelFormat.hpp  TextureManager.cpp  TextureManager.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexDescriptor.cpp  VertexDescriptor.hpp  (+9 more)
egolib/src/egolib/Grid/: Index.hpp  Rect.hpp
egolib/src/egolib/Image/: Image.cpp  Image.hpp  blit.hpp  (+14 more)
egolib/tests/: CMakeLists.txt  ColourMath.cpp  CompileTest.cpp  ConvexHullMath.cpp  MathConstantTest.cpp  MatrixMath.cpp  Pathname.cpp  PointMath.cpp  QuadTreeTest.cpp  Signal.cpp  StringUtilities.cpp  VectorMath.cpp
(+12915 files in other folders)
